--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!Doctype html>
 <html>
 <head>
-  <title>sasalovi</title>
+  <title>Steckbrief</title>
 </head>
 <body>
-    <h1>Aufgabenübersicht</h1>
-  	<a href="https://sasalovi.github.io/IXD/Task00/index.html" target="_blank">Aufgabe 1</a><br>
+  	<a href="https://sasalovi.github.io/IXD/Task00/index.html" target="_blank">Task #00</a><br>
 </body>
 </html>
