--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Steckbrief</title>
 </head>
 <body>
-  	<a href="https://sasalovi.github.io/IXD/Task00/SWOT_Analysis.pdf" target="_blank">Task #00</a><br>
+  	<a href="https://sasalovi.github.io/IXD/Task00/SWOT_Analysis.pdf" target="_blank">Task #00 | SWOT Analysis</a><br>
 </body>
 </html>
