--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
   	<a href="https://sasalovi.github.io/IXD/Task00/SWOT_Analysis.pdf" target="_blank">Task #00 | SWOT Analysis</a><br>
+    <a href="https://sasalovi.github.io/IXD/Task01/Task01.pdf" target="_blank">Task #01 | The Wallet Project</a><br>
 </body>
 </html>
