--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   	<a href="https://sasalovi.github.io/IXD/Task00/SWOT_Analysis.pdf" target="_blank">Task #00 | SWOT Analysis</a><br>
     <a href="https://sasalovi.github.io/IXD/Task01/Task01.pdf" target="_blank">Task #01 | The Wallet Project</a><br>
+  <a href="https://sasalovi.github.io/IXD/Task02/LowFidPrototype.pdf" target="_blank">Task #02.1 | Low Fidelity Prototype</a><br>
 </body>
 </html>
