--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   	<a href="https://sasalovi.github.io/IXD/Task00/SWOT_Analysis.pdf" target="_blank">Task #00 | SWOT Analysis</a><br>
     <a href="https://sasalovi.github.io/IXD/Task01/Task01.pdf" target="_blank">Task #01 | The Wallet Project</a><br>
   <a href="https://sasalovi.github.io/IXD/Task02/LowFidPrototype.pdf" target="_blank">Task #02.1 | Low Fidelity Prototype</a><br>
+  <a href="https://xd.adobe.com/view/74acf480-0e2c-4da3-8c42-f35d865c918b-21ff/" target="_blank">Task #02.2 | High Fidelity Prototype</a><br>
 </body>
 </html>
