--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <a href="https://xd.adobe.com/view/74acf480-0e2c-4da3-8c42-f35d865c918b-21ff/?fullscreen" target="_blank">Task #02.2 | High Fidelity Prototype</a><br>
   <a href="https://xd.adobe.com/view/80b1205d-1e21-44f2-94fa-1b48d5f2ec72-d5e2/?fullscreen" target="_blank">Task #03 | Smartwatch</a><br>
   <a href="https://xd.adobe.com/view/847f0ece-df7c-4d88-9417-8c65c99853ae-d12c/?fullscreen" target="_blank">Task #03 | Tablet</a><br>
+  <a href="https://xd.adobe.com/view/9e620c2a-598c-4ae9-9371-a87fbc1372c6-cb31/?fullscreen" target="_blank">Task #04 | Tablet Material Design</a><br>
 </body>
 </html>
