--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <a href="https://xd.adobe.com/view/6f2e371b-88e9-4882-996d-e5bc003aa972-3a7d/?fullscreen" target="_blank">Task #03 | Smartwatch</a><br>
   <a href="https://xd.adobe.com/view/727153da-62fa-4492-8e43-ef81e335edc6-2722/?fullscreen" target="_blank">Task #03 | Tablet</a><br>
   <a href="https://xd.adobe.com/view/9e620c2a-598c-4ae9-9371-a87fbc1372c6-cb31/?fullscreen" target="_blank">Task #04 | Tablet Material Design</a><br>
+   <a href="https://github.com/sasalovi/IXD/wiki/Task05-%7C-VUI" target="_blank">Task #05 | VUI</a><br>
 </body>
 </html>
