--- a/Task06/index.html
+++ b/Task06/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,10 @@
     <script src="js/VUI.js"></script>
 </head>
 <body>
-    <p>Aufgabe 06 | VUI</p>
-  
+    <h1>Aufgabe 06 | VUI</h1>
+    <button onclick="StartVUI()">Start VUI</button>
+    <h2>Hilfestellungen</h2>
+    <p id="answerTextbox"></p>
 
 
 
