--- a/Task06/index.html
+++ b/Task06/index.html
@@ -6,14 +6,16 @@
     <title>Task06 VUI</title>
     <script src="js/artyom.window.js"></script>
     <script src="js/VUI.js"></script>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1>Aufgabe 06 | VUI</h1>
-    <button onclick="StartVUI()">Start VUI</button>
-    <h2>Hilfestellungen</h2>
-    <p id="answerTextbox"></p>
-
-
-
+    <div id="mainContainer">
+        <h1>Task06 - VUI</h1>
+        <div id="buttonContainer">
+            <button onclick="StartVUI()">Start VUI</button>
+        </div>
+        <h3>Promp recommendations</h3>
+        <p id="answerTextbox"></p>
+    </div>
 </body>
 </html>
