--- a/Task06/index.html
+++ b/Task06/index.html
@@ -14,7 +14,7 @@
         <div id="buttonContainer">
             <button onclick="StartVUI()">Start VUI</button>
         </div>
-        <h3>Promp recommendations</h3>
+        <h3>Prompt recommendations</h3>
         <p id="answerTextbox"></p>
     </div>
 </body>
