--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <a href="https://xd.adobe.com/view/727153da-62fa-4492-8e43-ef81e335edc6-2722/?fullscreen" target="_blank">Task #03 | Tablet</a><br>
   <a href="https://xd.adobe.com/view/9e620c2a-598c-4ae9-9371-a87fbc1372c6-cb31/?fullscreen" target="_blank">Task #04 | Tablet Material Design</a><br>
    <a href="https://github.com/sasalovi/IXD/wiki/Task05-%7C-VUI" target="_blank">Task #05 | VUI</a><br>
+  <a href="https://github.com/sasalovi/IXD/wiki/Task06-%7C-VUI-Prototype" target="_blank">Task #06 | VUI Prototype</a><br>  
 </body>
 </html>
