--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="https://xd.adobe.com/view/9e620c2a-598c-4ae9-9371-a87fbc1372c6-cb31/?fullscreen" target="_blank">Task #04 | Tablet Material Design</a><br>
    <a href="https://github.com/sasalovi/IXD/wiki/Task05-%7C-VUI" target="_blank">Task #05 | VUI</a><br>
   <a href="https://github.com/sasalovi/IXD/wiki/Task06-%7C-VUI-Prototype" target="_blank">Task #06 | VUI Prototype</a><br>  
-  <a href="https://sasalovi.github.io/IXD/Task07/Task07_PPT.pdf" target="_blank">Task #07 | A/B Test</a><br>  
+  <a href="https://sasalovi.github.io/IXD/Task07/Task07_PPT.pdf" target="_blank">Task #07 | A/B Test</a><br> 
+  <a href="https://github.com/sasalovi/IXD/wiki/Task09-%7C-ESP32-Concept" target="_blank">Task #09 | ESP32 Concept</a><br> 
 </body>
 </html>
