--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <a href="https://github.com/sasalovi/IXD/wiki/Task06-%7C-VUI-Prototype" target="_blank">Task #06 | VUI Prototype</a><br>  
   <a href="https://sasalovi.github.io/IXD/Task07/Task07_PPT.pdf" target="_blank">Task #07 | A/B Test</a><br> 
   <a href="https://github.com/sasalovi/IXD/wiki/Task09-%7C-ESP32-Concept" target="_blank">Task #09 | ESP32 Concept</a><br> 
+  <a href="https://github.com/sasalovi/IXD/wiki/Task10-%7C-ESP32-Prototype" target="_blank">Task #10 | ESP32 Media control system</a><br> 
 </body>
 </html>
