--- a/index.html
+++ b/index.html
@@ -1,20 +1,61 @@
 <!Doctype html>
 <html>
 <head>
-  <title>Steckbrief</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sasalovici | IXD</title>
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-  	<a href="https://sasalovi.github.io/IXD/Task00/SWOT_Analysis.pdf" target="_blank">Task #00 | SWOT Analysis</a><br>
-    <a href="https://sasalovi.github.io/IXD/Task01/Task01.pdf" target="_blank">Task #01 | The Wallet Project</a><br>
-  <a href="https://sasalovi.github.io/IXD/Task02/LowFidPrototype.pdf" target="_blank">Task #02.1 | Low Fidelity Prototype</a><br>
-  <a href="https://xd.adobe.com/view/74acf480-0e2c-4da3-8c42-f35d865c918b-21ff/?fullscreen" target="_blank">Task #02.2 | High Fidelity Prototype</a><br>
-  <a href="https://xd.adobe.com/view/6f2e371b-88e9-4882-996d-e5bc003aa972-3a7d/?fullscreen" target="_blank">Task #03 | Smartwatch</a><br>
-  <a href="https://xd.adobe.com/view/727153da-62fa-4492-8e43-ef81e335edc6-2722/?fullscreen" target="_blank">Task #03 | Tablet</a><br>
-  <a href="https://xd.adobe.com/view/9e620c2a-598c-4ae9-9371-a87fbc1372c6-cb31/?fullscreen" target="_blank">Task #04 | Tablet Material Design</a><br>
-   <a href="https://github.com/sasalovi/IXD/wiki/Task05-%7C-VUI" target="_blank">Task #05 | VUI</a><br>
-  <a href="https://github.com/sasalovi/IXD/wiki/Task06-%7C-VUI-Prototype" target="_blank">Task #06 | VUI Prototype</a><br>  
-  <a href="https://sasalovi.github.io/IXD/Task07/Task07_PPT.pdf" target="_blank">Task #07 | A/B Test</a><br> 
-  <a href="https://github.com/sasalovi/IXD/wiki/Task09-%7C-ESP32-Concept" target="_blank">Task #09 | ESP32 Concept</a><br> 
-   <a href="https://github.com/sasalovi/IXD/wiki/Task10-%7C-ESP32-Media-control-system" target="_blank">Task #10 | ESP32 Media control system</a><br> 
+	<h1>Markus Sasalovici | IXD</h1>
+
+<div class="container">
+	<div class="card">
+		<h2>Car media control system</h2>
+		<img src="img/ESP32.jpg" alt="Task10" width="200">
+		<p>Development of a ESP32 based media control system for a car which includes features like bluetooth audio streaming, media control and a display for metadata output.</p>
+		<a href="https://github.com/sasalovi/IXD/wiki/Task10-%7C-ESP32-Media-control-system" target="_blank">Development</a><br>
+		<a href="https://github.com/sasalovi/IXD/wiki/Task09-%7C-ESP32-Concept" target="_blank">Conception</a><br> 		
+	</div>
+	
+	<div class="card">
+		<h2>A-B Test</h2>
+		<img src="img/AB.jpg" alt="Task07" width="200">
+		<p>Conducting a remote A-B test with ten participants based upon GUI prototypes created within this course.</p>
+		<a href="https://sasalovi.github.io/IXD/Task07/Task07_PPT.pdf" target="_blank">Task #07 | A/B Test</a><br> 
+  	</div>
+	
+	<div class="card">
+		<h2>Voice-User-Interface</h2>
+		<img src="img/VUI.png" alt="Task01" width="200">
+		<p>Concept and implementation of a VUI for booking flight tickets. Implementation based upon Artyom.</p>
+		<a href="https://github.com/sasalovi/IXD/wiki/Task06-%7C-VUI-Prototype" target="_blank">Development</a><br>  
+  		<a href="https://github.com/sasalovi/IXD/wiki/Task05-%7C-VUI" target="_blank">Conception</a><br>
+	</div>
+		
+	<div class="card">
+		<h2>GUI Design</h2>
+		<img src="img/GUI1.jpg" alt="Task01" width="200">
+		<p>Concept and interactive prototype of an interactive presentation system which is designed in order to display various data categories from multiple plants in the context of daily meetings within a company.</p>
+		<a href="https://xd.adobe.com/view/74acf480-0e2c-4da3-8c42-f35d865c918b-21ff/?fullscreen" target="_blank">Interactive Prototype</a><br>
+		<a href="https://sasalovi.github.io/IXD/Task02/LowFidPrototype.pdf" target="_blank">Concept</a><br>
+  	</div>	
+	
+	<div class="card">
+		<h2>GUI Transformation </h2>
+		<img src="img/GUI2.png" alt="Task01" width="200">
+		<p>Adapting the aforementioned interactive prototype for usage on tablet and smartwatch. Additionally, a Google Material Design themed version of the tablet prototype had to be created.</p>
+		<a href="https://xd.adobe.com/view/6f2e371b-88e9-4882-996d-e5bc003aa972-3a7d/?fullscreen" target="_blank">Smartwatch</a><br>
+		<a href="https://xd.adobe.com/view/727153da-62fa-4492-8e43-ef81e335edc6-2722/?fullscreen" target="_blank">Tablet</a><br>
+		<a href="https://xd.adobe.com/view/9e620c2a-598c-4ae9-9371-a87fbc1372c6-cb31/?fullscreen" target="_blank">Tablet Material Design</a><br>
+  	</div>
+	
+
+	<div class="card">
+		<h2>The Wallet Project</h2>
+		<img src="img/Wallet.jpg" alt="Task01" width="200">
+		<p>Die Zielsetzung bestand in der Entwicklung eines optimalen Geldbeutels unter Anwendung von Design Thinking.</p>
+		<a href="https://sasalovi.github.io/IXD/Task01/Task01.pdf" target="_blank">Task #01 | The Wallet Project</a><br>
+	</div>
+</div>
 </body>
 </html>
