--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<div class="card">
 		<h2>Voice-User-Interface</h2>
 		<img src="img/VUI.png" alt="Task01" width="200">
-		<p>Concept and implementation of a VUI for booking flight tickets. Implementation based upon Artyom.</p>
+		<p>Concept and implementation of a VUI for booking flight tickets. Implementation based on Artyom.</p>
 		<a href="https://github.com/sasalovi/IXD/wiki/Task06-%7C-VUI-Prototype" target="_blank">Development</a><br>  
   		<a href="https://github.com/sasalovi/IXD/wiki/Task05-%7C-VUI" target="_blank">Conception</a><br>
 	</div>
@@ -35,7 +35,7 @@
 	<div class="card">
 		<h2>GUI Design</h2>
 		<img src="img/GUI1.jpg" alt="Task01" width="200">
-		<p>Concept and interactive prototype of an interactive presentation system which is designed in order to display various data categories from multiple plants in the context of daily meetings within a company.</p>
+		<p>Concept and prototype of an interactive presentation system which is designed in order to display various data categories from multiple plants in the context of daily meetings within a company.</p>
 		<a href="https://xd.adobe.com/view/74acf480-0e2c-4da3-8c42-f35d865c918b-21ff/?fullscreen" target="_blank">Interactive Prototype</a><br>
 		<a href="https://sasalovi.github.io/IXD/Task02/LowFidPrototype.pdf" target="_blank">Concept</a><br>
   	</div>	
@@ -53,8 +53,8 @@
 	<div class="card">
 		<h2>The Wallet Project</h2>
 		<img src="img/Wallet.jpg" alt="Task01" width="200">
-		<p>Die Zielsetzung bestand in der Entwicklung eines optimalen Geldbeutels unter Anwendung von Design Thinking.</p>
-		<a href="https://sasalovi.github.io/IXD/Task01/Task01.pdf" target="_blank">Task #01 | The Wallet Project</a><br>
+		<p>Design and realization of a wallet prototype based on design thinking.</p>
+		<a href="https://sasalovi.github.io/IXD/Task01/Task01.pdf" target="_blank">Wallet Prototype</a><br>
 	</div>
 </div>
 </body>
